--- a/public/css/music.css
+++ b/public/css/music.css
@@ -6,52 +6,49 @@ a{text-decoration:none;}
 html,body{
     height: 100%;
     overflow: hidden;
+    font-size:100px;
 }
 #music{
-    width:320px;
-    height:640px;
-    margin:auto;
     background: rgba(0,0,0,.9);
 }
 
 .top{
+    display: flex;
     position:relative;
-    width: 304px;
-    height: 30px;
+    height: .8rem;
     text-align: center;
-    padding: 8px;
+    padding: .08rem;
 }
 .top a{
     float:left;
-    width: 40px;
-    height: 20px;
-    border:1px solid #fff;
-    border-radius: 10px;
+    width: 1.2rem;
+    height: .64rem;
+    border:.01rem solid #fff;
+    border-radius: .24rem;
     color:#fff;
-    font-size:12px;
+    font-size:.4rem;
     text-align: center;
-    line-height:20px;
+    line-height:.64rem;
     cursor: pointer;
 }
 .top input{
-    float:left;
-    width: 200px;
-    height: 20px;
+    flex:1;
+    height: .64rem;
     outline:none;
-    border:1px solid #fff;
-    border-radius: 15px;
+    border:.01rem solid #fff;
+    border-radius: .24rem;
     background: rgba(255,255,255,.3);
-    margin:0 7px;
+    margin:0 .1rem;
     color:#fff;
-    font-size:12px;
-    text-indent: 10px;
+    font-size:.4rem;
+    text-indent: .1rem;
 }
 .top .search-icon{
     position: absolute;
-    top:10px;
-    right:66px;
-    width: 20px;
-    height: 20px;
+    top:.1rem;
+    right:1.4rem;
+    width: .60rem;
+    height: .60rem;
     background: url("../images/search.png") no-repeat center/100%;
     cursor: pointer;
 }
@@ -59,29 +56,29 @@ html,body{
 #m_list,#h_list{
     z-index:999;
     position: absolute;
-    top:35px;
-    width: 200px;
-    padding:0 5px;
+    top:0.8rem;
+    width: 5.5rem;
+    padding:0 .1rem;
     text-align: left;
-    font-size:12px;
+    font-size:.4rem;
     display: none;
     background:rgba(79, 74, 74, 0.8);
 }
 #m_list{
-    left:10px;
+    left:.1rem;
 }
 #h_list{
-    right:10px;
+    right:.1rem;
 }
 #m_list p,#h_list p{
-    height:24px;
-    line-height: 24px;
+    height:.7rem;
+    line-height: .7rem;
     color:#ccc;
     overflow: hidden;
 }
 #h_list p span{
     float:right;
-    margin-left: 10px;
+    margin-left: .1rem;
     cursor: pointer;
 }
 #m_list p span:nth-child(1),#h_list p span:nth-child(1){
@@ -91,21 +88,21 @@ html,body{
 
 #m_list p span:nth-child(2){
     float:right;
-    margin-left: 10px;
+    margin-left: .1rem;
     cursor: pointer;
 }
 #add_success,#remove_success,#songExist{
     position: absolute;
-    top:200px;
+    top:5rem;
     left: 0;
     right:0;
     margin:auto;
-    width:130px;
-    height: 50px;
-    line-height: 50px;
+    width:3rem;
+    height: 1rem;
+    line-height: 1rem;
     text-align: center;
     color:#fff;
-    font-size: 14px;
+    font-size: .4rem;
     background: rgba(0,0,0,.2);
     transition:0.8s linear;
     opacity:0;
@@ -113,23 +110,23 @@ html,body{
 
 /*歌曲名、歌手名、cd、歌词样式*/
 .title{
-    height: 25px;
-    margin-top:10px;
+    height: .6rem;
+    margin-top:.2rem;
     font-weight: bold;
-    font-size:16px;
+    font-size:.46rem;
     color:#ccc;
     text-align: center;
 }
 .singer{
-    height:25px;
-    font-size:14px;
+    height:.6rem;
+    font-size:.40rem;
     color:#ccc;
     text-align: center;
-    margin:5px 0;
+    margin:.1rem 0;
 }
 .cd{
-    width:180px;
-    height: 180px;
+    width: 5.2rem;
+    height: 5.2rem;
     background:url("https://y.gtimg.cn/music/photo_new/T002R150x150M000002qcJuX3lO3EZ.jpg?max_age=2592000") no-repeat;
     background-size:100% 100%;
     border-radius: 50%;
@@ -145,20 +142,19 @@ html,body{
     to{transform:rotate(360deg);}
 }
 .lrc{
-    width: 300px;
-    height: 200px;
-    margin:10px auto 0;
+    width: 9rem;
+    height: 7rem;
+    margin:.1rem auto 0;
     overflow:hidden;
     color:#ccc;
     text-align: center;
 }
 
 .lrc p{
-    line-height:20px;
-    font-size:12px;
+    line-height:.5rem;
+    font-size:.34rem;
 }
 .lrc .content{
-
     position: relative;
     top:0;
     left:0;
@@ -170,27 +166,27 @@ html,body{
     display: flex;
     box-sizing: border-box;
     color:#fff;
-    font-size: 12px;
-    padding: 10px;
+    font-size: .36rem;
+    padding: .2rem;
 }
 .pro_bar{
+    flex:1;
     display: flex;
-    width: 228px;
-    height: 2px;
+    height: .03rem;
     background:#bebebe;
-    margin:9px 5px 0;
+    margin:.25rem .1rem;
 }
 .pro_bar span{
     display: block;
-    height:2px;
+    height:.03rem;
     width: 0px;
     background:rgb(0,255,66);
 }
 .pro_bar i{
     display: block;
-    width: 6px;
-    height: 6px;
-    margin-top:-2px;
+    width: .12rem;
+    height: .12rem;
+    margin-top:-.04rem;
     background: url("../images/circle.gif");
     border-radius: 50%;
 }
@@ -198,37 +194,38 @@ html,body{
 /*-----底部四个按钮样式------*/
 .foot_btn{
     width: 100%;
-    height: 50px;
+    height: 1rem;
     display: flex;
-    margin-top:10px;
+    margin-top:.3rem;
+    padding-bottom: 0.3rem;
 }
 .foot_btn div{
     flex:1;
     cursor: pointer;
 }
 #rand{
-    background: url(../images/rand1.png) no-repeat center;
+    background: url(../images/rand1.png) no-repeat center .1rem/.8rem;
 }
 #prev{
-    background: url(../images/pre.png) no-repeat center;
+    background: url(../images/pre.png) no-repeat center .1rem/.5rem;
 }
 #play{
-    background: url(../images/pause.png) no-repeat center;
+    background: url(../images/pause.png) no-repeat center .06rem/.45rem;
 }
 #next{
-    background: url(../images/next.png) no-repeat center;
+    background: url(../images/next.png) no-repeat center .1rem/.5rem;
 }
 
 #rand0,#rand1,#rand2{
     position: absolute;
-    bottom:40px;
-    left:5px;
-    width: 70px;
-    height: 25px;
-    line-height: 25px;
+    bottom:1.2rem;
+    left:.1rem;
+    width: 2.5rem;
+    height: .8rem;
+    line-height: .8rem;
     text-align: center;
     color:#fff;
-    font-size: 12px;
+    font-size: .4rem;
     background: rgba(255,255,255,.08);
     transition:0.5s linear;
     opacity:0;
@@ -238,21 +235,21 @@ html,body{
 #songs{
     z-index:999;
     position: fixed;
-    top:40px;
+    top:.8rem;
     right:0;
     left: 0;
     margin:auto;
-    width: 230px;
+    width: 7rem;
     background:#454545;
 }
 #ul1 p{
-    height:25px;
+    height:.6rem;
     text-align: left;
-    border-bottom: 1px solid #fff;
-    padding: 0 5px;
+    border-bottom: .01rem solid #fff;
+    padding: 0 .05rem;
     color:#fff;
-    font-size:12px;
-    line-height:25px;
+    font-size:.36rem;
+    line-height:.6rem;
     cursor: pointer;
 }
 #ul1 p span:nth-child(1){
